# trasmuto

./: LICENSE  PRD.md  README  README.md  eslint.config.js  index.html  package-lock.json  package.json  progress.txt
.github/workflows/: ci.yml  release.yml
docs/: PRD_v1_initial.md  PRD_v2_mvp.md  PRD_v3_ui_polish.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: convert.rs  mod.rs  probe.rs  settings.rs
src-tauri/src/ffmpeg/: builder.rs  finder.rs  mod.rs  progress.rs
src-tauri/tests/: conversion.rs
src/components/: JobItem.test.tsx  JobItem.tsx  JobQueue.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx
src/hooks/: useConversionSettings.test.ts  useConversionSettings.ts  useJobQueue.test.ts  useJobQueue.ts
src/lib/: tauri-commands.test.ts  tauri-commands.ts  types.ts
